Fix jumpiness when revealing install command (on most cases)

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -144,7 +144,7 @@ tr.package:hover .github-logo {
 .install-command-input {
   width: 100%;
   border-radius: 6px;
-  height: 40px;
+  height: 38px;
   border-style: none;
   background-color: #F0F0F0;
   font-size: 19px;
